# ast-grep-mcp

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .tarpaulin.toml  CHANGELOG.md  CLAUDE.md  Cargo.toml  DESIGN_NOTES.md  LANGUAGE_INJECTION_TODO.md  LEARNING_SYSTEM_IMPLEMENTATION.md  MCP_PROMPTS_IMPLEMENTATION.md  README.md  REFACTORING_CATALOG_SPEC.md  RMCP_UPGRADE_PLAN.md  ROADMAP.md  ROADMAP_ANALYSIS.md  TOOL_REMOVAL_PLAN.md  TOOL_USAGE_GUIDE.md  clippy.toml  replace_rule.yml  rust-toolchain.toml  rustfmt.toml  temp_test_file.rs  test_complex.js  test_console.js  test_js_in_html.html  test_rule_conversion.rs  test_ts.ts
.ast-grep-rules/: no-console-log.yaml
.cargo/: config.toml
docs/: REFACTORING_PLAN.md  pattern-syntax.md  rule-syntax.md  suggest_patterns_design.md  suggest_patterns_development_plan.md  suggest_patterns_tdd_plan.md
examples/: README.md  basic_usage.rs  composite_rule.yaml  debug_containment.rs  debug_rule_conversion.rs  modernize_js.yaml  replace_console_log.yaml  rule_demo.js  rule_management_example.md  test_any.ts  test_ast_structure.rs  test_class_body_pattern.rs  test_class_pattern.rs  test_inside_debug.rs  test_inside_rule.rs  test_metavar_capture.rs  test_multiline_pattern.rs  test_pattern_in_file.rs  test_service_vs_direct.rs  test_yaml_parsing.rs
refactorings/: consolidate_duplicate_conditional.yaml  extract_class.yaml  extract_method.yaml  extract_variable.yaml  inline_variable.yaml  introduce_parameter_object.yaml  rename_symbol.yaml  replace_conditional_with_guard.yaml  replace_loop_with_pipeline.yaml  (+1 more)
src/: ast_utils.rs  (+21 more)
(+99 files in other folders)
